# codex-feishu-bridge

./: .gitignore  AI_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md  INSTALL.md  RELEASING.md  SECURITY_MODEL.md
scripts/: check-pages.py  check-release.py  check-secrets-scan.py  install-user-service.sh  uninstall-user-service.sh
site/: 404.html  index.html  robots.txt  sitemap.xml  styles.css
src/codex_feishu_bridge/: __init__.py  artifacts.py  cli.py  codex_client.py  config.example.toml  config.py  daily_stats.py  db.py  feishu.py  models.py  privacy.py  service.py  visual_proxy.py
systemd/: codex-feishu-bridge.service  codex-feishu-daily-stats.service  codex-feishu-daily-stats.timer
tests/: test_artifacts.py  test_cli.py  test_codex_client.py  test_config.py  test_daily_stats.py  test_db.py  test_feishu.py  test_privacy.py  test_service.py  test_visual_proxy.py
