[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-feishu-bridge"
version = "0.3.0"
description = "A local Feishu control plane for persistent Codex conversations"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "zq-chen22" }]
maintainers = [{ name = "zq-chen22" }]
requires-python = ">=3.12"
keywords = ["codex", "feishu", "lark", "agent", "remote-control"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development",
]
dependencies = [
  "httpx>=0.24,<1",
  "lark-oapi==1.7.1",
  "Pillow>=10,<13",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
]
dev = [
  "bandit>=1.7,<2",
  "build>=1.2,<2",
  "detect-secrets>=1.5,<2",
  "pip-audit>=2.7,<3",
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.9,<1",
  "twine>=5,<7",
]

[project.urls]
Homepage = "https://github.com/zq-chen22/codex-feishu-bridge"
Documentation = "https://github.com/zq-chen22/codex-feishu-bridge/tree/main/docs"
Issues = "https://github.com/zq-chen22/codex-feishu-bridge/issues"
Source = "https://github.com/zq-chen22/codex-feishu-bridge"

[project.scripts]
codex-feishu-bridge = "codex_feishu_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_feishu_bridge = ["config.example.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
